<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".StartActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/culture_green_algae"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="60dp"
        android:textSize="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/collect_nutrients_and_increase_cell_number"
        android:textSize="20dp"/>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_margin="10dp"
       android:gravity="center">

       <ImageView
           android:layout_width="40dp"
           android:layout_height="40dp"
           android:src = "@drawable/chlamy"
           android:contentDescription="@null" />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/equal"
           android:textSize="20dp"/>

       <ImageView
           android:layout_width="35dp"
           android:layout_height="35dp"
           android:src = "@drawable/carbon"
           android:contentDescription="@null" />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/_3"
           android:textSize="20dp"/>

       <ImageView
           android:layout_width="35dp"
           android:layout_height="35dp"
           android:src = "@drawable/nitrogen"
           android:contentDescription="@null" />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/_2"
           android:textSize="20dp"/>

       <ImageView
           android:layout_width="35dp"
           android:layout_height="35dp"
           android:src = "@drawable/phosphorus"
           android:contentDescription="@null" />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/_1"
           android:textSize="20dp"/>

       <ImageView
           android:layout_width="35dp"
           android:layout_height="35dp"
           android:src = "@drawable/calcium"
           android:contentDescription="@null" />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/__1"
           android:textSize="20dp"/>

   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src = "@drawable/toxin"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toxin_dead_game_over"
            android:textSize="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src = "@drawable/star"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_direction"
            android:textSize="20dp"/>

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src = "@drawable/chlamy_right"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reversible"
            android:textSize="20dp"/>

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src = "@drawable/chlamy_n_left"
            android:contentDescription="@null" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src = "@drawable/light_off"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_off_tap_light_on"
            android:textSize="20dp"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src = "@drawable/light_on"
            android:contentDescription="@null" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/positive_direction"
            android:textSize="20dp"/>

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src = "@drawable/chlamy_right"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right_arrow"
            android:textSize="30dp"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src = "@drawable/light_on"
            android:contentDescription="@null" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/negative_direction"
            android:textSize="20dp"/>

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src = "@drawable/chlamy_n_left"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left_arrow"
            android:textSize="30dp"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src = "@drawable/light_on"
            android:contentDescription="@null" />

    </LinearLayout>



    <Button
        android:id="@+id/btn_start"
        android:text="@string/start"
        android:textSize="20dp"
        android:layout_margin="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>